# casper-examples

./: README.md
casper-example-template/: Makefile  README.md
casper-example-template/client/: package-lock.json  package.json  run.sh
casper-example-template/client/src/: ContractEvents.ts  ExampleContractClient.ts  TestScenario.ts  Utils.ts
casper-example-template/client/wasm/: contract.wasm
casper-example-template/contract/: Cargo.toml
casper-example-template/contract/src/: constants.rs  entry_points.rs  error.rs  events.rs  lib.rs  main.rs  utils.rs
casper-example-template/nctl-docker/: docker-compose.yaml
casper-example-template/tests/: Cargo.toml
voting-dapp/: .gitignore  Makefile  README.md
voting-dapp/3d-party-contract/: contract.wasm  deploy-contract.sh  get-deploy.sh  increment-counter-1-ep.sh  local-net-env  main.rs  query-state.sh  query-whole-state.sh  test-net-debug-user-env  test-net-demo-user-2-env
voting-dapp/nctl-docker/: docker-compose.yaml
voting-dapp/node-proxy/: Proxy.ts  package-lock.json  package.json  run.sh
voting-dapp/voting/: Cargo.toml  Makefile  governor.json  number.json
voting-dapp/voting-frontend/: package-lock.json  package.json
voting-dapp/voting/contracts/: .env.ln  .gitignore  CHANGELOG.md  Cargo.toml  Odra.toml  README.md
voting-dapp/voting/contracts/resources/: governor_schema.json  test_number_schema.json
voting-dapp/voting/contracts/src/: deployed_contracts.rs  governor.rs  lib.rs  types.rs
voting-dapp/voting/query-service/: .env  Cargo.toml
voting-dapp/voting/query-service/src/: dto.rs
(+55 files in other folders)
