[package]
name = "query-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odra = { version = "0.4.0", default-features = false }
contracts = { version = "0.1", path = "../contracts", default-features = false }
actix-web = "4"
actix-cors = "0.6.4"
log = "0.4"
serde_json = "1.0.103"
serde = "1.0.171"

[features]
default = ["casper-livenet"]
casper-livenet = ["contracts/casper-livenet"]

[[bin]]
name = "query-service"
path = "bin/query_service.rs"
required-features = ["casper-livenet"]